# dace-fpga

./: .coveragerc  .gitignore  .gitmodules  AUTHORS  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  pytest.ini
.github/workflows/: copilot-setup-steps.yml  fpga-ci.yml
dace_fpga/: __init__.py  api.py  fpga_config_schema.yml  fpga_testing.py  nodes.py  opencl_types.py  validation.py
dace_fpga/cmake/: fpga.cmake  intel_fpga.cmake  rtl.cmake  xilinx.cmake
dace_fpga/codegen/: fpga.py  intel_fpga.py  opencl_unparser.py  rtl.py  unroller.py  xilinx.py
dace_fpga/library_nodes/: __init__.py  reduce.py  stencil_intel_fpga.py
dace_fpga/library_nodes/blas/: __init__.py  axpy.py  dot.py  gemm.py  gemv.py  ger.py
dace_fpga/transformations/: __init__.py  fpga_auto_opt.py  fpga_transform_sdfg.py  fpga_transform_state.py  hbm_transform.py
docs/: codegen.rst  optimization.rst
samples/: axpy_transformed.py
tests/: auto_opt_fpga_test.py  autorun_test.py  axpy_transform_test.py  bank_split_test.py  channel_mangling_test.py  conflict_resolution_test.py  dot_fpga_test.py  fpga_instrumentation_test.py  fpga_stencil_test.py  gemv_fpga_test.py  hbm_transform_test.py  jacobi_fpga_test.py  kernel_detection_test.py  long_long_opencl_test.py  mandelbrot_fpga_test.py  map_unroll_processing_elements_test.py  mapfusion_fpga_test.py  matmul_test.py  memory_buffering_test.py  multibank_copy_fpga_test.py  multibank_deeply_nested_fpga_test.py  multibank_dynamic_memlets_test.py  multibank_multiple_interface_test.py  multibank_reduce_fpga_test.py  multibank_vadd_fpga_test.py  multibank_validation_test.py  multiple_veclen_conversions_test.py  nested_sdfg_as_kernel_test.py  overapprox_transient_shapes_test.py  pipeline_scope_test.py  power_opencl_test.py  reduce_fpga_test.py  remove_degenerate_loop_test.py  reshape_view_fpga_test.py  simple_systolic_array_test.py  spmv_fpga_test.py  streaming_memory_test.py  type_inference_test.py  unique_nested_sdfg_fpga_test.py  vec_sum_test.py  (+5 more)
tests/blas/: dot_test.py  gemv_test.py  ger_test.py
tests/npbench/deep_learning/: conv2d_bias_test.py  lenet_test.py  mlp_test.py  resnet_test.py  softmax_test.py
tests/npbench/misc/: arc_distance_test.py  azimint_hist_test.py  azimint_naive_test.py  cavity_flow_test.py  channel_flow_test.py  (+10 more)
tests/rtl/: hardware_test.py
tests/stencil/: stencil_node_test.py
(+41 files in other folders)
